# DemoRHF_PathTracing

Path Tracing - RHF -  WebGL/: app.py  cornell-path_00256.exr  cornell-path_00256_filt.exr  scripts.sh
Path Tracing - RHF -  WebGL/rhfCpp/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_  Object.cpp  Object.h  cmake_install.cmake  cudaBase.cu  cudaBase.h  exrcrop  exrdiff  exrtopng  exrtopng.cpp  io_exr.cpp  libauxiliar.cpp  libdenoising.cpp  libdenoising.h  main.out  model.cpp  model.h  pathTracer.cpp  pathTracer.h  rhf.cpp  toasters_filt.exr
Path Tracing - RHF -  WebGL/rhfCpp/demoCpp/: CMakeCache.txt  CMakeLists.txt  Makefile  app  base64.cpp  base64.h  cmake_install.cmake  main.cpp
Path Tracing - RHF -  WebGL/rhfCpp/model/: bloques_triang.mtl  bloques_triang_v2.mtl  bloques_triang_v3.mtl
Path Tracing - RHF -  WebGL/rhfCpp/nodeServer/: app.js  app.py  rhf.cpp  scripts.sh
Path Tracing - RHF -  WebGL/rhfCpp/nodeServer/python-websockets-example/: app.py
Path Tracing - RHF -  WebGL/rhfCpp/nodeServer/python-websockets-example/Flask/04_templatesAndStaticFiles/templates/: profile.html
Path Tracing - RHF -  WebGL/rhfCpp/nodeServer/python-websockets-example/templates/: index.html  main.html
Path Tracing - RHF -  WebGL/rhfCpp/shaders/: flat.frag  flat.vert  pathtracer.frag  pathtracer.vert  shader.frag  shader.vert
Path Tracing - RHF -  WebGL/static/: ObjLoader.js  RayTracingDemo.js  app.js
Path Tracing - RHF -  WebGL/static/models/: cubeobj.mtl
Path Tracing - RHF -  WebGL/static/rhf/: image_filt.exr
Path Tracing - RHF -  WebGL/static/shaders/: pathTracer.fs.glsl  pathTracer.vs.glsl
Path Tracing - RHF -  WebGL/templates/: pathTracingDemo.html
Path Tracing - RHF -  WebGL/templates/webgl (copy)/: Models.js  ObjLoader.js  RayTracingDemo.js  index.html
Path Tracing - RHF -  WebGL/templates/webgl (copy)/models/: bloques3.mtl
Path Tracing - RHF -  WebGL/templates/webgl (copy)/shaders/: pathTracer.fs.glsl
